# wedowind

./: .env.dist  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README_future_connectors.md  README_incompatibilities.md  pyproject.toml
.github/workflows/: databus-publish.yml  oep-publish.yml
catalog/: README.md
catalog/group-the-world-bank-group/: group-metadata.jsonld
catalog/group-the-world-bank-group/artefacts-1/: artefact-metadata.jsonld
catalog/group-zenodo/: group-metadata.jsonld
catalog/groups/: ieee-dataport.json
catalog/logs/: discrepancies.jsonl  publishings.jsonl
docs/: git_community.md
docs/code_platform/: code_platform.md
docs/data_portal/: ml-croissant.md
docs/data_science_platform/: data_science_platform.md
docs/knowledge_hub/: requirements.md
src/databus_local_manager/: README.md  __init__.py  __main__.py  catalog_schema.py  load_env.py  logs.py  parse.py  prepare_metadata.py  publish_local_catalog.py  scan_catalog.py
src/databus_manager/: __init__.py  __main__.py  artefacts.py  cli.py  common_core.py  compare_catalog_with_databus.py  config.py  discrepancies.py  fetch_remote.py  groups.py  handle_jsonld.py  load_env.py  logging_utils.py  parse.py  publish_group_metadata.py  scan_catalog.py  sparql.py  sync_catalog_with_databus.py  versions.py
src/databus_manager/objects/: __init__.py  logs.py  (+1 more)
src/mapper/: ckan_mapper.py  utils.py
src/mappers/: __init__.py  checkpoint_state.py  compute_sha256.py  databus.py  licenses.py  load_env.py  utils.py
src/schemas/: discrepancy.schema.json  publishing.schema.json
tests/: README.md  conftest.py
tests/integration/: test_integration_compare_catalog_with_databus.py  test_integration_oep_connection.py  test_integration_publish_group_metadata.py  test_integration_sync_catalog_with_databus.py
tests/test_data/: sample_sparql_results.json
tests/test_mappers/: test_ckan_mapper.py  test_ckan_publish_sources.py  test_oep_sanitize.py  test_oep_schema_inference.py  test_timestamp_persistence.py  test_utils.py  test_zenodo_mapper.py  test_zenodo_oep_mapper.py  test_zenodo_publish_sources.py
tests/unit/: test_compare_catalog_with_databus.py  test_handle_jsonld.py  test_objects_logs.py  test_objects_metadata.py  test_parse.py  test_publish_group_metadata.py  test_scan_catalog.py  test_sync_catalog_with_databus.py
(+63 files in other folders)
