[project]
name = "wedowind"
version = "0.1.0"
description = "Research Data Infrastructure for the WeDoWind community"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databusclient>=0.15",
    "jsonschema>=4.23",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databus_manager"]

[tool.hatch.build.targets.wheel.force-include]
"src/schemas" = "databus_manager/schemas"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
