[project]
name = "wedowind"
version = "0.1.0"
description = "Research Data Infrastructure for the WeDoWind community"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23",
    "python-dotenv>=1.0",
    "ckanapi",
    "omi>=1.2.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mappers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
